# Fresnel

./: .gitignore  AudioFile.cpp  AudioFile.h  CMakeLists.txt  Database.cpp  Database.h  FLAC.cpp  FLAC.h  HttpRequest.cpp  HttpRequest.h  Image.cpp  Image.h  Indexer.cpp  Indexer.h  JSDatabase.cpp  JSDatabase.h  JavaScript.cpp  JavaScript.h  Main.cpp  Main.h  OggEncode.cpp  OggEncode.h  Resource.cpp  Resource.h  SConstruct  SQLite.cpp  SQLite.h  Slingshot.cpp  Slingshot.h
Audio/: Audio.cpp  Audio.h  AudioDecoder.cpp  AudioDecoder.h  AudioEncoder.cpp  AudioEncoder.h  FLACDecoder.cpp  FLACDecoder.h  Metadata.cpp  Metadata.h  VorbisEncoder.cpp  VorbisEncoder.h
Image/: Image.cpp  Image.h
daemon/: CMakeLists.txt  DBQuery.cpp  DBQuery.h  Database.cpp  Database.h  Fresnel.cpp  Fresnel.h  HttpRequest.cpp  HttpRequest.h  Indexer.cpp  Indexer.h  Inotify.cpp  Inotify.h  JSDatabase.cpp  JSDatabase.h  JavaScript.cpp  PortForwarder.cpp  PortForwarder.h  ResFile.cpp  ResFile.h  Resource.cpp  Resource.h  SConstruct  SQLite.cpp  SQLite.h  Slingshot.cpp  Slingshot.h
daemon/Audio/: Audio.cpp  Audio.h  AudioDecoder.cpp  AudioDecoder.h  AudioEncoder.cpp  AudioEncoder.h  FLACDecoder.cpp  FLACDecoder.h  MP3Decoder.cpp  MP3Decoder.h  Metadata.cpp  Metadata.h  VorbisEncoder.cpp
daemon/Image/: Image.cpp  Image.h
daemon/inotify-cxx/: COPYING
scripts/: album.js  image.js  m3u.js  xspf.js
www/: image.html  index.html
www/js/: image.js  main.js
www/style/: main.css
